--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Iridium is a modded client for the popular game "Minecraft" aimed at automating tasks and also assisting the player.
+Iridium is a modded client for the popular game Minecraft aimed at automating tasks and also assisting the player.
 
 All mappings used for the Minecraft classes and fields are from the Minecraft Coder Pack - http://mcp.ocean-labs.de/
 Everything in this client is tested on a server running the server mod Spigot - http://www.spigotmc.org/
